# watch_tower

./: .gitignore  Cargo.toml  README.md  deny.toml  diesel.toml
.github/workflows/: ci.yml  mirror.yml
infra/: Dockerfile  docker-compose.yml
infra/migrations/2026-01-31-190654-0000_create_users/: up.sql
infra/pgadmin4/: servers.json
src/: config.rs  handlers.rs  lib.rs  libs.rs  main.rs  schema.rs  static_data.rs  templates.rs
src/controllers/api/: auth.rs  layers.rs  mod.rs
src/controllers/ui/: views.rs
src/models/: mod.rs
src/models/forms/: login_form.rs  register_form.rs
src/models/layers/: military_base.rs  mod.rs  nuclear_plant.rs  pipeline.rs  strait.rs
src/utils/: error.rs
static/js/: home.js
templates/: base.html  home.html  index.html  login.html  register.html
tests/: health_check.rs  index.rs  public_routes.rs
